# valence-shell

./: .credo.exs  .dockerignore  .editorconfig  .gitattributes  .gitignore  .hypatia-ignore  .tool-versions  0-AI-MANIFEST.a2ml  ABI-FFI-README.md  AGENTIC.scm  ARCHITECTURE.md  CHANGELOG.adoc  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTINUATION_SESSION_COMPLETE.md  CONTRIBUTING.adoc  CONTRIBUTING.md  Containerfile  ECOSYSTEM.scm  EXPLAINME.adoc  EXTRACTION_FILES.txt  EXTRACTION_SUMMARY.md  FAQ.adoc  FUNDING.yml  GOVERNANCE.adoc  HANDOVER.md  INTEGRATION_SUMMARY.md  Justfile  LICENSE  MAINTAINERS.adoc  MAINTAINERS.md  META.scm  Mustfile  NEUROSYM.scm  NOTICE  PALIMPSEST.adoc  PLAYBOOK.scm  PROOF-NEEDS.md  (+35 more)
.bot_directives/: echidnabot.scm
.claude/: CLAUDE.md
.clusterfuzzlite/: Containerfile  Dockerfile  build.sh  project.yaml
.github/: CODEOWNERS  FUNDING.yml  PROVEN-INTEGRATION.md  PULL_REQUEST_TEMPLATE.md  TEST_CI_ECHIDNA.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  proof_request.md
.github/scripts/: check-bridge-forbidden-phrases.sh  check-idris2-believe-me.sh
.github/workflows/: boj-build.yml  bridge-forbidden-phrases.yml  casket-pages.yml  cflite_batch.yml  cflite_pr.yml  codeql.yml  compilation_tests.yml  dogfood-gate.yml  echidna-validation.yml  elixir.yml  generator-generic-ossf-slsa3-publish.yml  governance.yml  guix-nix-policy.yml  hypatia-scan.yml  idris-verification.yml  instant-sync.yml  lean-verification.yml  mirror.yml  npm-bun-blocker.yml  push-email-notify.yml  quality.yml  rsr-antipattern.yml  rust-cli.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  (+5 more)
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECHO_TYPES_OCHRANCE_BRIDGE.a2ml  ECOSYSTEM.scm  IDRIS2_AXIOMS.a2ml  INTENT.contractile  META.a2ml  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.a2ml  STATE.scm  TRUST.contractile  root-allow.txt
.meta/: REQUIRED-FILES.md
.well-known/: ai.txt  humans.txt  provenance.json  security.txt
alkahest-shell-transmuter/: .gitignore  ABI-FFI-README.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.adoc  ROADMAP.adoc  RSR_OUTLINE.adoc  SECURITY.md
audits/: assail-classifications.a2ml  audit-ffi-2026-05-26.md  audit-triage-2026-06-01.md
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: ABI-FFI-BOUNDARY.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CITATIONS.adoc  COMPREHENSIVE_EXAMPLES.md  CONSOLIDATION_ANALYSIS.md  CONTINUATION_REPORT.md  CONTRIBUTOR_GUIDE_TIER1.md  DEMO_EXTERNAL_COMMANDS.md  ECHIDNA_INTEGRATION.md  ECHO-TYPES-OCHRANCE-BRIDGE.adoc  INTEGRATION.md  LAUNCHER.md  LEAN4_RUST_CORRESPONDENCE.md  OCAML_EXTRACTION.md  PHASE2_REPORT.md  PHASE3_INITIAL_REPORT.md  PHASE6_M10_DESIGN.md  PHASE6_M12_DESIGN.md  PHASE6_M13_DESIGN.md  PHASE6_M1_DESIGN.md  PHASE6_M2_DESIGN.md  PHASE6_M4_DESIGN.md  PHASE6_M5_DESIGN.md  PHASE6_M6_DESIGN.md  PHASE6_M7_DESIGN.md  PHASE6_M8_DESIGN.md  PHASE6_M9_DESIGN.md  POSIX-2024-NOTES.md  POSIX_COMPLIANCE.md  PROGRESS_REPORT.md  PROOF-NARRATIVE.adoc  PROOF-OPEN-FRONTIER.adoc  PROOF_HOLES_AUDIT.md  PROOF_OVERVIEW.md  PROPERTY_TESTING.md  README.adoc  ROADMAP_TO_V1.md  SEAM_ANALYSIS_AND_IDRIS2_PLAN.md  SEAM_SEALING_REPORT.md  (+16 more)
examples/: README.adoc
hooks/: README.adoc  pre-commit  validate-codeql.sh  validate-permissions.sh  validate-sha-pins.sh  validate-spdx.sh
impl/: README.adoc
impl/elixir/native/vsh_nif/: Cargo.toml
impl/elixir/native/vsh_nif/src/: lib.rs
impl/rust-cli/: .vsh_state.json  Cargo.toml  build.rs
impl/rust-cli/.cargo/: config.toml
impl/rust-cli/benches/: lean_verification_overhead.rs  operation_benchmarks.rs  performance_benchmarks.rs  shell_benchmarks.rs
impl/rust-cli/docs/: EXAMPLES.md  FUZZING.md  GETTING_STARTED.md  HARDWARE_TESTING_GUIDE.md  LEAN_EXTRACTION_BUILD_GUIDE.md  PARAMETER_EXPANSION.md  PHASE4B_PROPERTY_TESTING.md  PHASE4C_LEAN_EXTRACTION.md  PHASE4_CORRESPONDENCE.md  PHASE4_CORRESPONDENCE_DESIGN.md  PHASE6_M11_COMPLETE.md  PHASE6_M11_DESIGN.md  PHASE6_M2_COMPLETE.md  PHASE6_M2_FOUNDATION_COMPLETE.md  PHASE6_M7-M10_COMPLETE.md  SECURE_DELETION_STANDARDS.md  SECURE_ERASE_GUIDE.md  SESSION_2026-01-28_PHASE6_M2.md
impl/rust-cli/fuzz/: Cargo.toml
impl/rust-cli/fuzz/fuzz_targets/: fuzz_arith.rs  fuzz_glob_expansion.rs  fuzz_job_spec.rs  fuzz_parser.rs  fuzz_path_operations.rs  fuzz_signal_parse.rs  fuzz_state_machine.rs
impl/rust-cli/src/: README.adoc  arith.rs  audit_log.rs  commands.rs  confirmation.rs  correction.rs  daemon_client.rs  echidna_integration.rs  enhanced_repl.rs  executable.rs  external.rs  friendly_errors.rs  fs_pure.rs  functions.rs  glob.rs  help.rs  highlighter.rs  history.rs  job.rs  lean_ffi.rs  lib.rs  main.rs  pager.rs  parser.rs  posix_builtins.rs  process_sub.rs  proof_refs.rs  quotes.rs  redirection.rs  repl.rs  secure_erase.rs  signals.rs  state.rs  test_command.rs  verification.rs
impl/rust-cli/src/commands/: secure_deletion.rs
impl/rust-cli/tests/: README.adoc  correspondence_tests.rs  daemon_integration_test.rs  e2e_script_execution.rs  extended_test_tests.rs  function_and_script_tests.rs  function_control_flow_tests.rs  ifs_splitting_tests.rs  integration_test.rs  integration_tests.rs  lean4_proptest_correspondence.rs  manual_redirect_test.sh  manual_sigint_test.sh  model_oracle_correspondence.rs  multiline_script_tests.rs  obliterate_rmo_tests.rs  parameter_expansion_tests.rs  property_correspondence_tests.rs  property_tests.rs  secure_audit_prop_tests.rs  security_tests.rs  stress_tests.rs  tilde_expansion_tests.rs  trap_firing_tests.rs
impl/rust-cli/tests/fixtures/: mod.rs
impl/rust-ffi/: Cargo.toml
impl/rust-ffi/src/: audit.rs  errors.rs  lib.rs  preconditions.rs  rmo.rs
lib/: valence.ex
proofs/: README.md
scripts/: README.adoc  demo_verified_operations.sh  generate-verification-report.sh  install-hooks.sh  run.sh  security-audit.sh  validate-correspondence.sh  validate-with-echidna.sh  verify-proofs.sh
test/: valence_test.exs
tests/: integration_test.sh
(+432 files in other folders)
