# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "vsh"
version = "1.0.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
description = "Valence Shell - A formally verified reversible shell"
license = "PLMP-1.0-or-later"
repository = "https://github.com/hyperpolymath/valence-shell"
keywords = ["shell", "reversible", "formal-verification", "undo"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# Terminal UI
crossterm = "0.27"
ratatui = "0.25"

# Async runtime (for BEAM communication)
tokio = { version = "1.35", features = ["full"] }

# Serialization (for IPC with BEAM)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Directory operations
dirs = "5.0"

# Colored output
colored = "2.1"

# REPL with tab completion, history, syntax highlighting
reedline = "0.36"
nu-ansi-term = "0.50"

# UUID for operation IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Stdout/stderr capture for redirections
gag = "1.0"

# Signal handling (Ctrl+C for external commands)
ctrlc = "3.4"

# Unix syscalls (mkfifo for process substitution)
libc = "0.2"

# Glob pattern matching
glob = "0.3"

# Regex for extended test [[ =~ ]]
regex = "1.10"

# Directory walking (for recursive secure deletion)
walkdir = "2.4"

# which command lookup
which = "6.0"

# Unix socket for BEAM IPC
# (tokio already provides this)

[dev-dependencies]
# Property-based testing (validates Lean 4 theorems)
proptest = "1.4"
tempfile = "3.8"

# Benchmarking
criterion = "0.5"

[features]
# Optional Lean 4 runtime verification (precondition checking)
# Adds ~5% overhead, provides mathematical guarantees on operation safety
lean-runtime-checks = []

# Enhanced REPL with syntax highlighting and tab completion (default)
# Disable with --no-default-features for minimal build
default = ["enhanced-repl"]
enhanced-repl = []

[build-dependencies]
# Link to Zig FFI library
cc = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lib]
name = "vsh"
path = "src/lib.rs"

[[bin]]
name = "vsh"
path = "src/main.rs"

[[bench]]
name = "lean_verification_overhead"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
