# SPDX-License-Identifier: PLMP-1.0-or-later
# Valence Shell FFI Layer
# Provides verified POSIX operations with precondition checking

[package]
name = "vsh-ffi"
version = "0.1.0"
edition = "2021"
authors = ["Hyperpolymath <hyperpolymath@pm.me>"]
description = "FFI layer for Valence Shell - bridges Coq proofs to POSIX syscalls"
license = "PLMP-1.0-or-later"
repository = "https://github.com/hyperpolymath/valence-shell"
keywords = ["ffi", "posix", "formal-verification", "filesystem"]
categories = ["filesystem", "os"]

[lib]
name = "vsh_ffi"
path = "src/lib.rs"

[dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization for audit logs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for operation IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Unix-specific operations
libc = "0.2"

# Secure memory handling (for RMO)
zeroize = { version = "1.7", features = ["derive"] }

# Random for secure overwrite patterns
rand = "0.8"

# SHA-256 for content verification
sha2 = "0.10"

# File time manipulation
filetime = "0.2"

# Logging
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
# Enable additional security checks
paranoid = []
# Enable detailed audit logging
audit = []
